# heritrace

./: .dockerignore  .env  .gitignore  .releaserc.json  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.dev  LICENSE  README.md  REUSE.toml  Start-Databases.ps1  Stop-Databases.ps1  app.py  cache.json  change_tracking.json  citations.nq  codemeta.json  config.example.py  config.py  config.scripts.py  display_rules.yaml  display_rules_citations.yaml  docker-compose.dev.yaml  docker-compose.meta.yaml  docker-compose.redis.yaml  docker-compose.yaml  docker-compose.yml  generate_ssl_cert.py  invert.pyt  meta_counter_handler.db  nonexistent_config.json  ordered_form_fields.json  package-lock.json  package.json  pyproject.toml  redis.conf  shacl.ttl  start-databases.sh  stop-databases.sh  (+2 more)
.github/: CI_CD_SETUP.md  README.md  RELEASE.md
.github/workflows/: python-tests.yml  release.yml  reuse.yml
babel/: babel.cfg
dataset_database/: virtuoso.ini
db_volumes/data/: virtuoso-temp.db  virtuoso.ini  virtuoso.trx
db_volumes/prov/: virtuoso-temp.db  virtuoso.ini  virtuoso.trx
default_components/: meta_counter_handler.py  meta_uri_generator.py
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/: content.config.ts
edit_sphere/: app.py  editor.py  filters.py  forms.py  meta_counter_handler.py
edit_sphere/templates/: _base.jinja  about.jinja  create_entity.jinja  create_entity_old.jinja  endpoint.jinja  entities.jinja  entity_history.jinja  entity_version.jinja  footer.jinja  index.jinja  navigation.jinja  sub_form_template.jinja  triples.jinja
edit_sphere/uri_generator/: __init__.py  default_uri_generator.py  meta_uri_generator.py  uri_generator.py
example_configurations/opencitations_meta/: display_rules.yaml  shacl.ttl
example_configurations/paratext/: display_rules.yaml  shacl.ttl
heritrace/: __init__.py  app.py  app_old.py  cli.py  editor.py  entity_sorter.py  extensions.py  filters.py  forms.py  get_info_from_shacl.py  meta_counter_handler.py  models.py
heritrace/apis/: orcid.py  zenodo.py
heritrace/errors/: handlers.py
heritrace/routes/: __init__.py  api.py  auth.py  entity.py  linked_resources.py  main.py  merge.py
heritrace/scripts/: clean_missing_entities.py  reset_provenance.py
heritrace/services/: __init__.py  resource_lock_manager.py  sparql.py
heritrace/templates/: _base.jinja  about.jinja  catalogue.jinja  create_entity.jinja  custom_properties.jinja  endpoint.jinja  entities.jinja  entity_history.jinja  entity_version.jinja  footer.jinja  index.jinja  lock_workflow.jinja  login.jinja  macros.jinja  navigation.jinja  primary_source_handler.jinja  sub_form_template.jinja  time_vault.jinja  top_level_search.jinja  validation.jinja
heritrace/uri_generator/: __init__.py  default_uri_generator.py  meta_uri_generator.py  uri_generator.py
heritrace/utils/: converters.py  datatypes.py  datatypes_validation.py  demo_utils.py  display_rules_utils.py  entity_utils.py  filters.py  primary_source_utils.py  shacl_display.py  shacl_utils.py  shacl_validation.py  sparql_utils.py  strategies.py  uri_utils.py  virtual_properties.py  virtuoso_utils.py
papers/: arco.md  clef.md  evaluating_citation_functions_in_cito_cognitive_issues.md  heritrace.md  heritrace_speech.md  heritrace_v2.md  paratext.md  presentation.md  review.md  reviewer_response.md  tools_for_the_automatic_generation_of_ontology_documentation.md  what_do_we_mean_by_data.md
prov_database/: virtuoso.ini
resources/: context.json  datatypes.py  datatypes_validation.py  shacl.ttl
test/meta_subset/: output_1.nq  output_12.nq  output_13.nq  output_14.nq  (+11 more)
tests/: README.md  Start-TestDatabases.ps1  Stop-TestDatabases.ps1  conftest.py  start-test-databases.sh  stop-test-databases.sh  test_cache.json  test_change_tracking.json  test_config.py
user_testing/: 01_end_user_testing.md  01_participant_recruitment.md  02_technician_testing.md  03_analysis_framework.md  03_end_user_testing.md  04_user_scenarios.md  05_data_collection.md  06_analysis_framework.md  README.md  email_configurators.md  email_end_users.md  sus_questionnaire.md  user_testing_privacy_consent_form.md  user_testing_privacy_consent_form.odt  written_responses_end_users.md  written_responses_technicians.md  written_responses_template.md
user_testing/analysis_software/: README.md  audio_extractor.py  axial_code_verification.py  grounded_analysis.py  grounded_theory_plots.py  plot_utils.py  pyproject.toml  recruitment_distribution.py  selective_code_verification.py  stats_utils.py  sus_calculator.py  task_metrics.py  task_pipeline.py  task_plots.py  transcriber.py
(+250 files in other folders)
