[project]
name = "user-testing-analysis"
version = "0.1.0"
description = "User testing analysis toolkit starting with video transcription"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.30.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.65.0",
    "mistral-common>=1.8.3",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "vllm>=0.6.4",
    "setuptools>=80.9.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
